modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,48 @@
     <title>Styling Exercise</title>
     <style>
         /* Your CSS code goes here */
+        .header {
+            background-color: aquamarine;
+            margin-bottom: 50px;
+            padding: 10px;
+        }
+        .main {
+            background-color: blueviolet;
+            margin-left: 10px;
+            padding-right: 5px;
+        }
+        .footer {
+            background-color: brown;
+            padding-top: 10px;
+            margin-inline: 5px;
+        }
+
+        h1{
+            font-size: larger;
+            color: black;
+        }
+        p {
+            font-size: medium;
+            *color: rgb(0, 255, 21);*
+            text-decoration-style: wavy;
+        }
+        li {
+            font-size: small;
+            color: crimson;
+        }
+        #first-item {
+            border: 10px;
+            color: #000;
+            text-decoration-line: underline;
+        }
+        a:hover {
+            color: deeppink;
+        }
+        p::first-letter {
+            color: peru;
+            font-weight: bolder;
+            font-size: x-large;
+        }
     </style>
 </head>
 
