--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         p {
             font-size: medium;
-            *color: rgb(0, 255, 21);*
+            color: rgb(0, 255, 21);
             text-decoration-style: wavy;
         }
         li {
